# velo

./: .env.example  .gitattributes  README.md  package-lock.json  package.json
scripts/: build-portable.mjs  fetch-singbox.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  profile.rs  startup.rs  subscription.rs  tray.rs
src-tauri/src/commands/: autostart.rs  core_cmds.rs  elevation.rs  environment.rs  mod.rs  profiles.rs  routing.rs  settings.rs  subscriptions.rs  sysproxy.rs
src-tauri/src/config/singbox/: dns.rs  inbounds.rs  mod.rs  outbounds.rs  route.rs  types.rs
src-tauri/src/core/: job.rs  mod.rs  port.rs  runner.rs  sidecar.rs  sink.rs  stats.rs
src-tauri/src/parser/: common.rs  error.rs  mod.rs  shadowsocks.rs  trojan.rs  vless.rs  vmess.rs
src-tauri/src/routing/: elevation.rs  mod.rs  processes.rs
src-tauri/src/store/: migrations.rs  mod.rs  profiles.rs  routing.rs  settings.rs  subscriptions.rs  types.rs
src-tauri/src/sysproxy/: mod.rs  registry.rs
src-tauri/tests/: live_sub.rs  runner_e2e.rs  singbox_validate.rs
src/lib/: api.ts  autostart.ts  bootstrap.ts  events.ts  format.ts  state.svelte.ts  types.ts
src/lib/actions/: connect.ts
src/lib/components/: AddFromSubTab.svelte  AddFromUrlTab.svelte  AddModal.svelte  AddProfileCard.svelte  ContextMenu.svelte  Drawer.svelte  EmptyState.svelte  ErrorBanner.svelte  FilterChips.svelte  LogsPanel.svelte  Modal.svelte  ProcessPickerModal.svelte  ProfileCard.svelte  ProfileGrid.svelte  RoutingDrawer.svelte  SettingsDrawer.svelte  StatusBar.svelte  SubscriptionQuota.svelte  ThroughputPanel.svelte  Toast.svelte  WarningBanner.svelte
src/lib/components/icons/: IconClose.svelte  IconCopy.svelte  IconInfo.svelte  IconLock.svelte  IconPencil.svelte  (+8 more)
src/lib/stores/: catalog.svelte.ts  core.svelte.ts  logs.svelte.ts  routing.svelte.ts  stats.svelte.ts  sysproxy.svelte.ts  toast.svelte.ts
src/lib/types/: ui.ts  wire.ts
src/routes/: +page.svelte
